--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BloodPengu: Documentation</title>
-<link rel="icon" type="image/png" href="./assets/images/bp-logo.png">
+<link rel="icon" type="image/png" href="./assets/images/pengu_logo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Syne:wght@400;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./assets/styles.css">
@@ -26,7 +26,7 @@
     <a href="#features">Features</a>
     <a href="#screenshots">Screenshots</a>
     <a href="#architecture">Architecture</a>
-    <a href="https://github.com/pengu-apm/BloodPengu" target="_blank" class="nav-btn">GitHub</a>
+    <a href="https://github.com/pengu-apm/" target="_blank" class="nav-btn">GitHub</a>
   </div>
   <button class="nav-mobile-toggle" id="mobile-toggle">
     <span></span><span></span><span></span>
@@ -38,7 +38,7 @@
   <a href="#features">Features</a>
   <a href="#screenshots">Screenshots</a>
   <a href="#architecture">Architecture</a>
-  <a href="https://github.com/pengu-apm/BloodPengu" target="_blank">GitHub</a>
+  <a href="https://github.com/pengu-apm/" target="_blank">GitHub</a>
 </div>
 
 <section class="hero">
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class="shot-info">
-        <div class="shot-title">LXD Group Escape</div>
+        <div class="shot-title">Container Group Escape</div>
         <div class="shot-desc">Vuln-User is a member of the lxd group. BloodPengu maps the LXDGroupEscape edge directly to root, exposing the single-hop privilege escalation chain.</div>
       </div>
     </div>
