--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="hero-actions">
       <a href="https://github.com/pengu-apm/BloodPengu" target="_blank" class="btn-red">BloodPengu</a>
       <a href="https://github.com/pengu-apm/PyPengu" target="_blank" class="btn-ghost">PyPengu</a>
-      <a href="https://pengu-apm.github.io/pengu-apm/" target="_blank" class="btn-outline">Documentation</a>
+      <a href="https://pengu-apm.github.io/" target="_blank" class="btn-outline">Documentation</a>
     </div>
     <div class="hero-stats">
       <div class="stat">
@@ -398,7 +398,7 @@
     <div class="footer-logo">Blood<span>Pengu</span></div>
     <div class="footer-links">
       <a href="https://github.com/pengu-apm/BloodPengu" target="_blank">GitHub</a>
-      <a href="https://pengu-apm.github.io/pengu-apm/" target="_blank">Documentation</a>
+      <a href="https://pengu-apm.github.io/" target="_blank">Documentation</a>
       <a href="https://github.com/pengu-apm/PyPengu" target="_blank">PyPengu</a>
       <a href="mailto:byt3n33dl3@pm.me">Contact</a>
     </div>
